<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:text="@string/bar"
        android:textAlignment="center"
        android:textSize="25pt"
        android:textStyle="italic" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25pt">
        <Button
            android:id="@+id/btn_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="nextActivityForm"

            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"

            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"

            />
    </LinearLayout>

    <ImageView
        android:id="@+id/imv_photo"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:layout_margin="@dimen/margin_size"
        android:src="@mipmap/ic_launcher_round" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_size"
        android:textStyle="bold"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txv_name"
            android:text="@string/name"
            android:textSize="@dimen/size15"
            android:layout_marginBottom="@dimen/margin_size"
            android:textColor="#788e49"
            android:textAlignment="center"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txv_location"
            android:text="@string/location"
            android:textSize="@dimen/size14"
            android:layout_marginBottom="@dimen/margin_size"
            android:textColor="#1f95b6"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txv_type"
            android:text="@string/phone"
            android:textSize="@dimen/size13"
            android:textColor="#707171"
            android:textAlignment="center"
            />
    </LinearLayout>

</LinearLayout>