<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/number">

        <Button
            android:id="@+id/btn_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="nextActivityForm"

            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"

            />

        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"

            />
    </LinearLayout>

    <ImageView
        android:id="@+id/imv_photo"
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:layout_margin="@dimen/margin_size"
        android:src="@mipmap/ic_launcher" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_size"
        android:textStyle="bold"
        >



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txv_name"
            android:text="@string/name"
            android:textSize="@dimen/size15"
            android:layout_marginBottom="@dimen/margin_size"
            android:textColor="#663300"
            android:textAlignment="center"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txv_location"
            android:text="@string/location"
            android:textSize="@dimen/size14"
            android:layout_marginBottom="@dimen/margin_size"
            android:textColor="#FF9900"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txv_type"
            android:text="@string/type"
            android:textSize="@dimen/size13"
            android:textColor="#CC9900"
            android:textAlignment="center"
            />
            />
    </LinearLayout>

</LinearLayout>